--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "src/pieChart.css",
             ],
             "scripts": []
           },
