--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.7",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
@@ -25,7 +25,9 @@
     "c3": "^0.6.2",
     "core-js": "^2.5.4",
     "d3": "^5.0.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
+    "ui-carousel": "^0.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
